# tp_tis2_salgado

./: .gitignore  COMO_LIMPIAR_CONTEXTO.md  PROMPT_CONTEXTO.md  README.md  TIS2---Enunciado-2025--v1.docx  docker-compose.yml  dudas  enunciado.md  requirements.txt  setup.md
notebooks/: README.md  agentic-rag.ipynb  agentic-rag.md  chatmodel.ipynb  chatmodel.md  customerchurnclassification-fs.ipynb  dataset.json  dataset_original_with_openai_embeddings.json  langchainmultiagentcollaboration.ipynb  pneumoniapreprocessing.ipynb  raglangchaimongodb.ipynb  raglangchaimongodb.md  raglangchain.ipynb  raglangchain.md  react-web-search.ipynb  react-web-search.md  salarypredictionregression.ipynb  semanticsearchnotebook.ipynb  semanticsearchnotebook.md  sql-agent.ipynb
notebooks/chroma_db/: chroma.sqlite3
notebooks/clase-ha/__MACOSX/: ._taller
notebooks/clase-ha/__MACOSX/taller/: ._Dockerfile  ._docker-compose.yml  ._jmeter-loadtest.jmx  ._nginx  ._pyproject.toml  ._src
notebooks/clase-ha/taller/: Dockerfile  docker-compose.yml  jmeter-loadtest.jmx  pyproject.toml
notebooks/clase-ha/taller/nginx/: nginx.conf
notebooks/clase-ha/taller/src/: app.py
notebooks/material-ml-api/0_ML/: ClaseLeIA1.ipynb  ClaseLeIA1.py  model.keras  readme.md  requirements.txt
notebooks/material-ml-api/1.1_fastapi/: Dockerfile  main.py  readme_fastapi.md  requirements.txt
notebooks/material-ml-api/1_flask/: Dockerfile  readme_flask.md  requirements.txt
notebooks/material-ml-api/2_docker/: readme.md
notebooks/material-ml-api/__MACOSX/: ._0_ML  ._1.1_fastapi  ._1_flask  ._2_docker
(+32 files in other folders)
