[project]
name = "v0-4-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Matias Urbieta",email = "matiasurbieta@gmail.com"}
]
#readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.120.1,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
